[package]
name = "bevy-multiplayer"
version = "0.1.0"
edition = "2024"


[dependencies]
bevy = { version = "0.16.1", default-features=false, features = [] }
bevy_renet2 = "0.10.0"
bincode = { version = "2.0.1", features = ["serde"] }
renet2 = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
renet2_netcode = "0.10.0"
bevy_rapier2d = "0.30.0"
rand = "0.9.1"

